<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/loginHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="100dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:textSize="40sp"
                android:textColor="#000000"
                android:text="@string/login"
                android:textAlignment="center"
                android:layout_height="wrap_content" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/emailCard"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="21dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="110dp"
                app:layout_constraintTop_toBottomOf="@id/loginHeader"
                android:layout_width="0dp"
                android:layout_height="85dp">

                <ImageView
                    android:id="@+id/emailIcon"
                    android:layout_marginStart="9dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="20dp"
                    android:layout_height="16dp"
                    android:src="@drawable/ic_mail"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/EmailTitle"
                    android:layout_marginStart="13dp"
                    app:layout_constraintStart_toEndOf="@id/emailIcon"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toTopOf="@id/emailIcon"
                    app:layout_constraintBottom_toBottomOf="@id/emailIcon"
                    android:textSize="22sp"
                    android:textColor="#000000"
                    android:text="@string/user_name"
                    android:textAlignment="textStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:hint="@string/hint_user_name"
                    android:textColorHint="@color/gray"
                    android:id="@+id/userNameEditText"
                    android:layout_marginStart="17dp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="21dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/emailIcon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/passwordCard"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="21dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="37dp"
                app:layout_constraintTop_toBottomOf="@id/emailCard"
                android:layout_width="0dp"
                android:layout_height="85dp">

                <ImageView
                    android:id="@+id/lock"
                    android:layout_marginStart="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="7dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/icon_lock"
                    android:scaleType="centerCrop" />

                <TextView
                    android:id="@+id/password"
                    android:layout_marginStart="12dp"
                    app:layout_constraintStart_toEndOf="@id/lock"
                    android:layout_marginTop="0dp"
                    app:layout_constraintTop_toTopOf="@id/lock"
                    app:layout_constraintBottom_toBottomOf="@id/lock"
                    android:textSize="22sp"
                    android:textColor="#000000"
                    android:text="@string/password"
                    android:textAlignment="textStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:textColor="@color/black"
                    android:hint="@string/hint_password"
                    android:textColorHint="@color/gray"
                    android:inputType="textPassword"
                    android:id="@+id/passwordEdit"
                    android:layout_marginStart="19dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="19dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/lock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_marginStart="18dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="21dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="38dp"
                app:layout_constraintTop_toBottomOf="@id/passwordCard"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:textColor="@color/white"
                android:background="@color/black"
                android:text="@string/login" />

            <TextView
                android:id="@+id/createAccount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="42dp"
                app:layout_constraintTop_toBottomOf="@id/loginBtn"
                android:textSize="22sp"
                android:textColor="#6d6d6f"
                android:text="@string/create_password"
                android:textAlignment="textStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
